infra/chat-app-services/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatappservices
  labels:
    app: chatappservices
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chatappservices
  template:
    metadata:
      labels:
        app: chatappservices
    spec:
      #serviceAccountName: secret-ksa
      imagePullSecrets:
        - name: gcr-json-key
      containers:
      - name: chatappservices 
        image: gcr.io/finalproject-tp-production/chatapp-services:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "200m"
          requests:
            cpu: "100m"
