infra/chat-app-services/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatapp-api-service
spec:
  selector:
    app: chatappservices
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
