infra/chat-app-services/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatapp-api-ingress
  namespace: chat-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-production"

spec:
  tls:
  - hosts:
    - api.my-chat-project.club
    secretName: chat-app-api-tls
  rules:
    - host: "api.my-chat-project.club"
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /
            backend:
              service:
                name: chatapp-api-service
                port:
                  number: 80
